# unixDomainSocketsExample

./: .gitignore  CMakeLists.txt  README.txt  clientProcess.cpp  serverProcess.cpp
common/: connection.h  converters.cpp  converters.h
